# metron

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
data_prep/: prep.py
rag/: Makefile  custom_output_parser.py  custom_prompt_template.py  gen.py  main.py  pyproject.toml
rag/docs/: README.md  SOLUTION.md
