[tool.poetry]
name = "metron"
version = "0.1.0"
description = ""
authors = ["J.Stone <jameson@stone.tc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.6.0"
langchain = "^0.0.352"
requests = "^2.31.0"
langchain-experimental = "^0.0.47"
black = "^23.12.0"
google-api-python-client = "^2.111.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "python main.py"
